--- a/scss/origen.scss
+++ b/scss/origen.scss
@@ -10,3 +10,7 @@ h1 {
     text-align: center;
     margin: 10px;
 }
+
+body {
+    background-image: url(../assets/img/soldados-equipo-guerra.jpg);
+}
